welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: '(' expected but '{' found.
while {(estSurBiscuit()=false)
      ^Variables:6: error: illegal start of simple expression
var dejafait:int=0
^Variables:7: error: '(' expected but '{' found.
while {(dejafait<>nbpas)
      ^Variables:11: error: illegal start of simple expression
	}
        ^